optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_export_issue.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

const App = component$(() => {
	return (
		<div>hola</div>
	);
});


export const Root = component$((props: Stuff) => {
	return (
		<App/>
	);
});

const Other = 12;
export { Other as App };

export default App;

============================= test.tsx_Root_component_royhjYaCbYE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const Root_component_royhjYaCbYE = (props)=>{
	const [App] = useLexicalScope();
	return _jsxSorted(App, null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "test.tsx_Root_component_royhjYaCbYE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    146,
    190
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, "hola", 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    69,
    110
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
const i_royhjYaCbYE = ()=>import("./test.tsx_Root_component_royhjYaCbYE");
const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_royhjYaCbYE, "Root_component_royhjYaCbYE", [App]));
const Other = 12;
export { Other as App };
export default App;


None
== DIAGNOSTICS ==

[]
