optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_exports.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const [a, {b, v1: [c], d=v2, ...e}, f=v3, ...g] = obj;

const exp1 = 1;
const internal = 2;
export {exp1, internal as expr2};

export function foo() { }
export class bar {}

export default function DefaultFn() {}

export const Header = component$(() => {
	return $(() => (
		<Footer>
			<div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
			<div>{v1}{v2}{v3}{obj}</div>
		</Footer>
	))
});

export const Footer = component$();

============================= project/test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_uWM1kg0IGO0 = ()=>import("./test.tsx_Header_component_1_uWM1kg0IGO0");
const i_UVBJuFYfvDo = ()=>import("./test.tsx_Header_component_UVBJuFYfvDo");
export const [a, { b, v1: [c], d = v2, ...e }, f = v3, ...g] = obj;
const exp1 = 1;
const internal = 2;
export { exp1, internal as expr2 };
export function foo() {}
export class bar {}
export default function DefaultFn() {}
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_UVBJuFYfvDo, "Header_component_UVBJuFYfvDo", [exp1, internal]));
export const Footer = /*#__PURE__*/ qrl(i_uWM1kg0IGO0, "Header_component_1_uWM1kg0IGO0", [exp1, internal]);


None
============================= test.tsx_Header_component_UVBJuFYfvDo.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Header_component_UVBJuFYfvDo = ()=>{
	const [exp1, internal] = useLexicalScope();
	return /*#__PURE__*/ qrl(i_uWM1kg0IGO0, "Header_component_1_uWM1kg0IGO0", [exp1, internal]);
};


None
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "test.tsx_Header_component_UVBJuFYfvDo",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    303,
    459
  ]
}
*/
============================= test.tsx_Header_component_1_uWM1kg0IGO0.tsx (ENTRY POINT)==

import { bar, foo, default as DefaultFn } from "./test";
export const Header_component_1_uWM1kg0IGO0 = ()=>{
	const [exp1, internal] = useLexicalScope();
	return <Footer>
			<div>{a}{b}{c}{d}{e}{f}{exp1}{internal}{foo}{bar}{DefaultFn}</div>
			<div>{v1}{v2}{v3}{obj}</div>
		</Footer>;
};


None
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_1_uWM1kg0IGO0",
  "entry": null,
  "displayName": "test.tsx_Header_component_1",
  "hash": "uWM1kg0IGO0",
  "canonicalFilename": "test.tsx_Header_component_1_uWM1kg0IGO0",
  "path": "project",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    321,
    456
  ]
}
*/
== DIAGNOSTICS ==

[]
