optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_fix_dynamic_import.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
import thing from "../state";

export function foo() {
	return import("../foo/state2")
}

export const Header = component$(() => {
	return (
		<div>
			{import("../folder/state3")}
			{thing}
		</div>
	);
});

============================= project/folder/test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_RGgm7Ks9QWI = ()=>import("./test.tsx_Header_component_RGgm7Ks9QWI");
export function foo() {
	return import("../foo/state2");
}
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_RGgm7Ks9QWI, "Header_component_RGgm7Ks9QWI"));


None
============================= test.tsx_Header_component_RGgm7Ks9QWI.tsx (ENTRY POINT)==

import thing from "../state";
export const Header_component_RGgm7Ks9QWI = ()=>{
	return <div>
			{import("../folder/state3")}
			{thing}
		</div>;
};


None
/*
{
  "origin": "project/folder/test.tsx",
  "name": "Header_component_RGgm7Ks9QWI",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component",
  "hash": "RGgm7Ks9QWI",
  "canonicalFilename": "test.tsx_Header_component_RGgm7Ks9QWI",
  "path": "project/folder",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    171,
    254
  ]
}
*/
== DIAGNOSTICS ==

[]
