optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_functional_component.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStore } from '@qwik.dev/core';
const Header = component$(() => {
	const thing = useStore();
	const {foo, bar} = foo();

	return (
		<div>{thing}</div>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Qw9nV3mG0KQ = ()=>import("./test.tsx_Header_component_Qw9nV3mG0KQ");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Qw9nV3mG0KQ, "Header_component_Qw9nV3mG0KQ"));


None
============================= test.tsx_Header_component_Qw9nV3mG0KQ.tsx (ENTRY POINT)==

import { useStore } from "@qwik.dev/core";
export const Header_component_Qw9nV3mG0KQ = ()=>{
	const thing = useStore();
	const { foo, bar } = foo();
	return <div>{thing}</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Header_component_Qw9nV3mG0KQ",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "Qw9nV3mG0KQ",
  "canonicalFilename": "test.tsx_Header_component_Qw9nV3mG0KQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    183
  ]
}
*/
== DIAGNOSTICS ==

[]
