optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_functional_component_2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStore } from '@qwik.dev/core';
export const useCounter = () => {
	return useStore({count: 0});
}

export const STEP = 1;

export const App = component$((props) => {
	const state = useCounter();
	const thing = useStore({thing: 0});
	const STEP_2 = 2;

	const count2 = state.count * 2;
	return (
		<div onClick$={() => state.count+=count2 }>
			<span>{state.count}</span>
			{buttons.map(btn => (
				<button
					onClick$={() => state.count += btn.offset + thing + STEP + STEP_2 + props.step}
				>
					{btn.name}
				</button>
			))}

		</div>

	);
})

============================= test.tsx_App_component_div_map_button_onClick_K5Zt4qx8Rig.js (ENTRY POINT)==

import { STEP } from "./test";
import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_map_button_onClick_K5Zt4qx8Rig = (_, _1, btn)=>{
	const [STEP_2, props, state, thing] = useLexicalScope();
	return state.count += btn.offset + thing + STEP + STEP_2 + props.step;
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_map_button_onClick_K5Zt4qx8Rig",
  "entry": null,
  "displayName": "test.tsx_App_component_div_map_button_onClick",
  "hash": "K5Zt4qx8Rig",
  "canonicalFilename": "test.tsx_App_component_div_map_button_onClick_K5Zt4qx8Rig",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useCounter } from "./test";
import { useStore } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_K5Zt4qx8Rig = ()=>import("./test.tsx_App_component_div_map_button_onClick_K5Zt4qx8Rig");
const i_onClick = ()=>import("./test.tsx");
const _hf0 = (p0)=>p0.name;
const _hf0_str = "p0.name";
export const App_component_ckEPmXZlub0 = (props)=>{
	const state = useCounter();
	const thing = useStore({ thing: 0 });
	const STEP_2 = 2;
	const count2 = state.count * 2;
	const App_component_div_map_button_onClick_K5Zt4qx8Rig = /*#__PURE__*/ qrl(i_K5Zt4qx8Rig, "App_component_div_map_button_onClick_K5Zt4qx8Rig", [
		STEP_2,
		props,
		state,
		thing
	]);
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_onClick, "App_component_div_onClick", [count2, state]) }, null, [/*#__PURE__*/ _jsxSorted("span", null, null, state.count, 1, null), buttons.map((btn)=>/*#__PURE__*/ _jsxSorted("button", {
		"on:click": App_component_div_map_button_onClick_K5Zt4qx8Rig,
		"q:p": btn
	}, null, _fnSignal(_hf0, [btn], _hf0_str), 1, null))], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    179,
    578
  ]
}
*/
============================= test.js ==

import { useStore } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const useCounter = ()=>{
	return useStore({ count: 0 });
};
export const STEP = 1;
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
