optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_getter_generation.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$(() => {
	const store = useStore({
		count: 0,
		stuff: 0,
		nested: {
			count: 0
		}
	});
	const signal = useSignal(0);
	return (
		<Cmp
			prop={'true' + 1 ? 'true' : ''}
			count={store.count}
			nested={store.nested.count}
			signal={signal}
			store={store.stuff + 12}
			value={signal.formData?.get('username')}
		>
		</Cmp>
	);
});

export const Cmp = component$((props) => {
	return (
		<>
			<p data-value={props.count}>{props.nested.count}</p>
			<p>Value {props.count}<span></span></p>
		</>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = ()=>import("./test.tsx_App_component_XumqEURaLxI");
const i_qsBJpzBk9qc = ()=>import("./test.tsx_Cmp_component_qsBJpzBk9qc");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_qsBJpzBk9qc, "Cmp_component_qsBJpzBk9qc"));


None
============================= test.tsx_App_component_XumqEURaLxI.js (ENTRY POINT)==

import { _jsxSorted, useStore } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = ()=>{
	const store = useStore({
		count: 0,
		stuff: 0,
		nested: { count: 0 }
	});
	const signal = useSignal(0);
	return _jsxSorted(Cmp, {
		count: store.count,
		nested: store.nested.count,
		store: store.stuff + 12,
		value: signal.formData?.get("username")
	}, {
		prop: "true" + 1 ? "true" : "",
		signal
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    422
  ]
}
*/
============================= test.tsx_Cmp_component_qsBJpzBk9qc.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Cmp_component_qsBJpzBk9qc = (props)=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("p", { data-value: props.count }, null, props.nested.count, 1, null), /*#__PURE__*/ _jsxSorted("p", null, null, [
		"Value",
		props.count,
		/*#__PURE__*/ _jsxSorted("span", null, null, null, 3, null)
	], 1, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_qsBJpzBk9qc",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "qsBJpzBk9qc",
  "canonicalFilename": "test.tsx_Cmp_component_qsBJpzBk9qc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    456,
    594
  ]
}
*/
== DIAGNOSTICS ==

[]
