optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_immutable_function_components.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, Slot } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<div>
			<Slot/>
		</div>
	);
});

============================= test.js ==

import { Slot, _jsxSorted, componentQrl, inlinedQrl } from "@qwik.dev/core";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, _jsxSorted(Slot, null, null, null, 3, null), 3, null);
}, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
