optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_inlined_entry_strategy.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@qwik.dev/core';
import { thing } from './sibling';
import mongodb from 'mongodb';

export const Child = component$(() => {

	useStyles$('somestring');
	const state = useStore({
		count: 0
	});

	// Double count watch
	useBrowserVisibleTask$(() => {
		state.count = thing.doStuff() + import("./sibling");
	});

	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_j0TLFXIKSrI = ()=>import("./test.tsx_Child_component_useStyles_j0TLFXIKSrI");
const i_zqMxaBj0SWU = ()=>import("./test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU");
const i_80js9RUUsfM = ()=>import("./test.tsx_Child_component_80js9RUUsfM");
export const Child = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_80js9RUUsfM, "Child_component_80js9RUUsfM"));


None
============================= test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU.tsx (ENTRY POINT)==

import { thing } from "./sibling";
export const Child_component_useBrowserVisibleTask_zqMxaBj0SWU = ()=>{
	const [state] = useLexicalScope();
	state.count = thing.doStuff() + import("./sibling");
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useBrowserVisibleTask_zqMxaBj0SWU",
  "entry": "entry_segments",
  "displayName": "test.tsx_Child_component_useBrowserVisibleTask",
  "hash": "zqMxaBj0SWU",
  "canonicalFilename": "test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "loc": [
    316,
    381
  ]
}
*/
============================= test.tsx_Child_component_useStyles_j0TLFXIKSrI.tsx (ENTRY POINT)==

export const Child_component_useStyles_j0TLFXIKSrI = "somestring";


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useStyles_j0TLFXIKSrI",
  "entry": "entry_segments",
  "displayName": "test.tsx_Child_component_useStyles",
  "hash": "j0TLFXIKSrI",
  "canonicalFilename": "test.tsx_Child_component_useStyles_j0TLFXIKSrI",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    211,
    223
  ]
}
*/
============================= test.tsx_Child_component_80js9RUUsfM.tsx (ENTRY POINT)==

const i_zqMxaBj0SWU = ()=>import("./test.tsx_Child_component_useBrowserVisibleTask_zqMxaBj0SWU");
const i_j0TLFXIKSrI = ()=>import("./test.tsx_Child_component_useStyles_j0TLFXIKSrI");
export const Child_component_80js9RUUsfM = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_j0TLFXIKSrI, "Child_component_useStyles_j0TLFXIKSrI"));
	const state = /*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_j0TLFXIKSrI, "Child_component_useStyles_j0TLFXIKSrI"));
	/*#__PURE__*/ useBrowserVisibleTaskQrl(/*#__PURE__*/ qrl(i_zqMxaBj0SWU, "Child_component_useBrowserVisibleTask_zqMxaBj0SWU", [state]));
	return <div on:click={/*#__PURE__*/ useBrowserVisibleTaskQrl(/*#__PURE__*/ qrl(i_zqMxaBj0SWU, "Child_component_useBrowserVisibleTask_zqMxaBj0SWU", [state]))}>
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Child_component_80js9RUUsfM",
  "entry": "entry_segments",
  "displayName": "test.tsx_Child_component",
  "hash": "80js9RUUsfM",
  "canonicalFilename": "test.tsx_Child_component_80js9RUUsfM",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    190,
    455
  ]
}
*/
== DIAGNOSTICS ==

[]
