optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_input_bind.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';

export const Greeter = component$(() => {
	const value = useSignal(0);
	const checked = useSignal(false);
	const stuff = useSignal();
	return (
		<>
			<input bind:value={value} />
			<input bind:checked={checked} />
			<input bind:stuff={stuff} />
			<div>{value}</div>
			<div>{value.value}</div>
		</>

	)
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_n7HuG2hhU0Q = ()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_n7HuG2hhU0Q, "s_n7HuG2hhU0Q"));


None
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const s_n7HuG2hhU0Q = ()=>{
	const value = useSignal(0);
	const checked = useSignal(false);
	const stuff = useSignal();
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("input", null, {
			value,
			"on:input": inlinedQrl(_val, "_val", [value])
		}, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", null, {
			checked,
			"on:input": inlinedQrl(_chk, "_chk", [checked])
		}, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", null, { "bind:stuff": stuff }, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, value, 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(value), 1, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_n7HuG2hhU0Q",
  "entry": "entry_segments",
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    359
  ]
}
*/
== DIAGNOSTICS ==

[]
